# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

EXTRA_DIST = conventions.mkdoc description.mkdoc fdl-1.3.mkdoc          \
        intro.mkdoc modules.mkdoc template.mkdoc top.mkdoc              \
        tutorial.mkdoc mkdoc.conf headers.mkdoc texinfo_head.tmpl       \
        html_title.tmpl

EXTRA_DIST += catenary_spot.png coordinates.png dist_patterns.png       \
        hexseg_mirror.png newton3d.png newton_wynne4_layout.png         \
        refractor_fan.png refractor_layout.png tessar_layout.png        \
        tessar_longitudinal.png tessar_opdfan.png                       \
        tessar_spot_intensity.png tessar_spot.png                       \
        tessar_transverse.png

SUBDIRS = texinfo

