# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir = $(includedir)/Goptical/Curve

pkginclude_HEADERS = Array Composer Conic ConicBase Base array.hh      \
        array.hxx composer.hh composer.hxx conic_base.hh                \
        conic_base.hxx conic.hh conic.hxx flat.hh flat.hxx              \
        foucault.hh foucault.hxx grid.hh grid.hxx base.hh base.hxx    \
        parabola.hh parabola.hxx polynomial.hh polynomial.hxx           \
        curve_roc.hh curve_roc.hxx rotational.hh rotational.hxx         \
        sphere.hh sphere.hxx spline.hh spline.hxx zernike.hh            \
        zernike.hxx Flat Foucault Grid Parabola Polynomial Rotational   \
        Sphere Spline Zernike
