# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir = $(includedir)/Goptical/Data

pkginclude_HEADERS = discrete_set.hh discrete_set.hxx grid.hh           \
        grid.hxx data_interpolate_1d.hh data_interpolate_1d.hxx         \
        plotdata.hh plotdata.hxx plot.hh plot.hxx sample_set.hh         \
        sample_set.hxx set1d.hh set1d.hxx set.hh set.hxx DiscreteSet    \
        Grid Plot PlotData SampleSet Set Set1d
