# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir = $(includedir)/Goptical/Io

pkginclude_HEADERS = Export Import ImportOslo ImportZemax export.hh     \
        import.hh import_oslo.hh import_zemax.hh import_zemax.hxx       \
        renderer_2d.hh renderer_2d.hxx renderer_axes.hh                 \
        renderer_axes.hxx renderer_dxf.hh renderer_dxf.hxx              \
        renderer_gd.hh renderer_gd.hxx renderer.hh renderer.hxx         \
        renderer_opengl.hh renderer_opengl.hxx renderer_plplot.hh       \
        renderer_plplot.hxx renderer_svg.hh renderer_svg.hxx            \
        renderer_viewport.hh renderer_viewport.hxx renderer_x11.hh      \
        renderer_x11.hxx renderer_x3d.hh renderer_x3d.hxx rgb.hh        \
        rgb.hxx Renderer Renderer2d RendererAxes RendererDxf            \
        RendererGd RendererOpengl RendererPlplot RendererSvg            \
        RendererViewport RendererX11 RendererX3d Rgb
