# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir = $(includedir)/Goptical/Material

pkginclude_HEADERS = Abbe Air Catalog Conrady Dielectric                \
        DispersionTable Herzberger Base abbe.hh abbe.hxx air.hh     \
        air.hxx catalog.hh catalog.hxx conrady.hh conrady.hxx           \
        dielectric.hh dielectric.hxx dispersion_table.hh                \
        dispersion_table.hxx herzberger.hh herzberger.hxx base.hh   \
        base.hxx metal.hh metal.hxx mil.hh mil.hxx mirror.hh        \
        mirror.hxx proxy.hh proxy.hxx schott.hh schott.hxx              \
        sellmeier.hh sellmeier.hxx sellmeiermod.hh sellmeiermod.hxx     \
        solid.hh solid.hxx vacuum.hh vacuum.hxx Metal Mil Mirror        \
        Proxy Schott Sellmeier SellmeierMod Solid Vacuum
