# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir = $(includedir)/Goptical/Shape

pkginclude_HEADERS = Composer Disk Ellipse EllipticalRing Infinite      \
        Polygon Rectangle RegularPolygon Ring Base composer.hh   \
        composer.hxx disk.hh disk.hxx                 \
        ellipse.hh ellipse.hxx elliptical_ring.hh     \
        elliptical_ring.hxx base.hh base.hxx                    \
        infinite.hh infinite.hxx polygon.hh           \
        polygon.hxx rectangle.hh rectangle.hxx        \
        regular_polygon.hh regular_polygon.hxx              \
        ring.hh ring.hxx shape_round.hh shape_round.hxx
