# Copyright (C) 2010-2011 Free Software Foundation, Inc
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir = $(includedir)/Goptical/Sys

pkginclude_HEADERS = Container Element Group Image Lens Mirror          \
        OpticalSurface Source SourcePoint SourceRays Stop Surface       \
        container.hh container.hxx element.hh               \
        element.hxx group.hh group.hxx image.hh         \
        image.hxx lens.hh lens.hxx mirror.hh            \
        mirror.hxx optical_surface.hh optical_surface.hxx   \
        source.hh source.hxx source_point.hh                \
        source_point.hxx source_rays.hh source_rays.hxx     \
        stop.hh stop.hxx surface.hh surface.hxx         \
        system.hh system.hxx System
